--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>net.nextpulse</groupId>
   <artifactId>jfactuursturen</artifactId>
-  <version>0.2.1</version>
+  <version>0.2.2</version>
   <packaging>jar</packaging>
   <url>https://github.com/yholkamp/jfactuursturen</url>
   <name>JFactuurSturen</name>
@@ -38,8 +38,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <kotlin.version>1.2.71</kotlin.version>
-    <jackson.version>2.9.7</jackson.version>
+    <kotlin.version>1.3.11</kotlin.version>
+    <jackson.version>2.9.8</jackson.version>
     <log4j.version>2.11.1</log4j.version>
     <joda-time.version>2.10</joda-time.version>
   </properties>
@@ -102,7 +102,7 @@
     <!-- Kotlin -->
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-jre8</artifactId>
+      <artifactId>kotlin-stdlib-jdk8</artifactId>
       <version>${kotlin.version}</version>
       <scope>compile</scope>
     </dependency>
