--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,8 @@
     <kotlin.version>1.3.11</kotlin.version>
     <jackson.version>2.9.8</jackson.version>
     <log4j.version>2.11.1</log4j.version>
-    <joda-time.version>2.10</joda-time.version>
+    <joda-time.version>2.10.1</joda-time.version>
+    <okhttp.version>3.12.1</okhttp.version>
   </properties>
 
   <distributionManagement>
@@ -56,7 +57,7 @@
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
-      <version>3.11.0</version>
+      <version>${okhttp.version}</version>
     </dependency>
 
     <!-- JSON Deserialization -->
@@ -128,14 +129,14 @@
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.10.19</version>
+      <artifactId>mockito-core</artifactId>
+      <version>2.23.4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.nhaarman</groupId>
+      <groupId>com.nhaarman.mockitokotlin2</groupId>
       <artifactId>mockito-kotlin</artifactId>
-      <version>1.6.0</version>
+      <version>2.1.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
