--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>net.nextpulse</groupId>
   <artifactId>jfactuursturen</artifactId>
-  <version>0.2.2</version>
+  <version>0.2.3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <url>https://github.com/yholkamp/jfactuursturen</url>
   <name>JFactuurSturen</name>
@@ -29,8 +27,10 @@
   </licenses>
 
   <scm>
-    <url>https://github.com/yholkamp/jfactuursturen</url>
-    <developerConnection>scm:git:ssh:/git@github.com/yholkamp/jfactuursturen</developerConnection>
+    <connection>scm:git:git@github.com:yholkamp/jfactuursturen.git</connection>
+    <developerConnection>scm:git:git@github.com:yholkamp/jfactuursturen.git</developerConnection>
+    <url>scm:git:git@github.com:yholkamp/jfactuursturen.git</url>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
@@ -222,6 +222,16 @@
       <id>release</id>
       <build>
         <plugins>
+          <plugin>
+            <artifactId>maven-release-plugin</artifactId>
+            <version>2.5.3</version>
+            <configuration>
+              <autoVersionSubmodules>true</autoVersionSubmodules>
+              <localCheckout>true</localCheckout>
+              <tagNameFormat>@{project.version}</tagNameFormat>
+              <releaseProfiles>release</releaseProfiles>
+            </configuration>
+          </plugin>
           <plugin>
             <!-- Set up the configuration to publish to the Sonatype repository -->
             <groupId>org.sonatype.plugins</groupId>
